correction des contrastes

--- a/style.css
+++ b/style.css
@@ -771,20 +771,20 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #f85204;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: rgb(248, 82, 4)!important;
 }
 
 .btn-atomic-tangerine {
-    background: #e95009;
+    background: #f85204;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background:  #f85204!important;
     color: #FFFFFF!important;
 }
 
